--- a/JS/29.箭头函数的特点.html
+++ b/JS/29.箭头函数的特点.html
@@ -13,6 +13,7 @@
     var p={
         age:18,
         //es6中对象方法的箭头函数表示形式
+        // arrow function do not have feild, it is depend on outside
         run:()=>{
             setTimeout(()=>{
                 //this:window
